fix: hamburger menu on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,3 +80,21 @@ h1 {
     display: none;
   }
 }
+
+.hamburger {
+  padding-right: 20px;
+  cursor: pointer;
+}
+
+.hamburger .line {
+  display: block;
+  width: 40px;
+  height: 4px;
+  margin-bottom: 9px;
+  background-color: #000000;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: flex-end;
+}
